# depthai-node

./: .clang-format  .gitignore  .gitmodules  .npmignore  .yarnrc.yml  CMakeLists.txt  Dockerfile  README.md  build-in-docker.sh  discovery.d.ts  discovery.js  discovery.test.js  index.d.ts  index.js  package.json  postinstall.js  prepare-prebuilds.js  relocate-prebuilds.js
.github/: build-linux.yml
.github/workflows/: build-linux.yml
cmake/toolchain/: arm64.cmake  pic.cmake
examples/: buildInfo.js  listDevices.js
libusb/usr/lib/aarch64-linux-gnu/: libusb-1.0.so.0.3.0
libusb/usr/lib/aarch64-linux-gnu/pkgconfig/: libusb-1.0.pc
libusb/usr/lib/x86_64-linux-gnu/pkgconfig/: libusb-1.0.pc
resources/: podman-containers.conf  podman-policy.json
src/: build-wrapper.cpp  build-wrapper.h  debug.hpp  device-wrapper.cpp  device-wrapper.h  device.cpp  device.hpp  deviceMonitor.cpp  deviceMonitor.hpp  discovery.cpp  discovery.hpp  instanceData.hpp  main.cpp  pipeline-wrapper.cpp  pipeline-wrapper.h  pipeline.cpp  pipeline.hpp  uuid.cpp  uuid.hpp
utils/: checkABI.js
